added navigation code and header image

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="#">Contact</a>
         </nav>
       </div>
+      <img src="img/fun-bus.jpg" alt="Let's go on an adventure!">
     </header>
     <section class="content-section">
       <div class="text-content">
