--- a/index.html
+++ b/index.html
@@ -14,19 +14,25 @@
   <![endif]-->
 </head>
 
-<body>  
+<body>
+
+  <header class="main-navigation">
+    <div class="container nav-container">
+      <h1 class="logo-heading">Fun Bus</h1>
+      <nav class="nav">
+        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="#">Contact</a>
+      </nav>
+    </div>
+  </header>
+     
   <div class="container home">
-    <header class="nav">
-      <div class="container">
-        <h1>Fun Bus</h1>
-        <nav>
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-        </nav>
-      </div>
-      <img src="img/fun-bus.jpg" alt="Let's go on an adventure!">
+    <header class="intro">
+      <img src="img/fun-bus.jpg" alt="bus in the sand">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
     </header>
     <section class="content-section">
       <div class="text-content">
